--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -257,7 +257,6 @@
 "Remove item","Remove item"
 "Remove product from shopping cart","Remove product from shopping cart"
 "Remove product(s) from shopping cart","Remove product(s) from shopping cart"
-"Require Customer To Be Logged In To Checkout","Require Customer To Be Logged In To Checkout"
 "Retrieve information about shopping cart","Retrieve information about shopping cart"
 "Review Order","Review Order"
 "Review Order - %s","Review Order - %s"
@@ -341,6 +340,7 @@
 "Update product quantities in shopping cart","Update product quantities in shopping cart"
 "Update product(s) quantities in shopping cart","Update product(s) quantities in shopping cart"
 "Use Billing Address","Use Billing Address"
+"Use Separate Register Step","Use Separate Register Step"
 "VAT Number","VAT Number"
 "View Shopping Cart","View Shopping Cart"
 "We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress.","We are processing your order and you will soon receive an email with details of the order. Once the order has shipped you will receive another email with a link to track its progress."
