--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -1,4 +1,5 @@
 " or "," or "
+"(Not %s?)","(Not %s?)"
 "'%value%' appears to be a DNS hostname but cannot extract TLD part","'%value%' appears to be a DNS hostname but cannot extract TLD part"
 "'%value%' appears to be a DNS hostname but cannot match TLD against known list","'%value%' appears to be a DNS hostname but cannot match TLD against known list"
 "'%value%' appears to be a DNS hostname but cannot match against hostname schema for TLD '%tld%'","'%value%' appears to be a DNS hostname but cannot match against hostname schema for TLD '%tld%'"
@@ -7,6 +8,7 @@
 "'%value%' appears to be a local network name but local network names are not allowed","'%value%' appears to be a local network name but local network names are not allowed"
 "'%value%' appears to be an IP address, but IP addresses are not allowed","'%value%' appears to be an IP address, but IP addresses are not allowed"
 "'%value%' does not appear to be a valid local network name","'%value%' does not appear to be a valid local network name"
+"""Remember Me"" Default Value","""Remember Me"" Default Value"
 "* Required Fields","* Required Fields"
 "ALL GROUPS","ALL GROUPS"
 "Account Dashboard","Account Dashboard"
@@ -29,6 +31,7 @@
 "All","All"
 "All Store Views","All Store Views"
 "All countries","All countries"
+"Already registered?","Already registered?"
 "Always optional.","Always optional."
 "Amount","Amount"
 "An error occurred while deleting the address.","An error occurred while deleting the address."
@@ -67,7 +70,12 @@
 "Change Shipping Address","Change Shipping Address"
 "Changed Email or Password Email Template","Changed Email or Password Email Template"
 "Changed Password or Email","Changed Password or Email"
+"Checkout as Guest","Checkout as Guest"
+"Checkout as a Guest","Checkout as a Guest"
+"Checkout as a Guest or Register","Checkout as a Guest or Register"
 "City","City"
+"Clear Persistence on Log Out","Clear Persistence on Log Out"
+"Close","Close"
 "Company","Company"
 "Config","Config"
 "Configure","Configure"
@@ -76,6 +84,7 @@
 "Confirmation Link Email","Confirmation Link Email"
 "Confirmed","Confirmed"
 "Contact Information","Contact Information"
+"Continue","Continue"
 "Continue Shopping","Continue Shopping"
 "Country","Country"
 "Create","Create"
@@ -152,8 +161,10 @@
 "Email Link to Set Password on New Account","Email Link to Set Password on New Account"
 "Email Template","Email Template"
 "Email:","Email:"
+"Enable ""Remember Me""","Enable ""Remember Me"""
 "Enable Automatic Assignment to Customer Group","Enable Automatic Assignment to Customer Group"
 "Entity collection is expected.","Entity collection is expected."
+"Enable Persistence","Enable Persistence"
 "Excel XML","Excel XML"
 "Failed to confirm customer account.","Failed to confirm customer account."
 "Fax","Fax"
@@ -171,6 +182,7 @@
 "Gender","Gender"
 "Gender is required.","Gender is required."
 "General Subscription","General Subscription"
+"General Options","General Options"
 "Generate Human-Friendly Customer ID","Generate Human-Friendly Customer ID"
 "Global","Global"
 "Group","Group"
@@ -322,7 +334,9 @@
 "Redirect Customer to Account Dashboard after Logging in","Redirect Customer to Account Dashboard after Logging in"
 "Refunded","Refunded"
 "Register","Register"
+"Register and Checkout","Register and Checkout"
 "Registered Customers","Registered Customers"
+"Remember Me","Remember Me"
 "Remind Email Template","Remind Email Template"
 "Remind Password","Remind Password"
 "Remove","Remove"
@@ -339,15 +353,19 @@
 "Retrieve customers","Retrieve customers"
 "Retrieve your confirmation link here","Retrieve your confirmation link here"
 "Retrieve your password here","Retrieve your password here"
+"Returning Customers","Returning Customers"
 "SKU","SKU"
 "Sales Statistics","Sales Statistics"
 "Save","Save"
 "Save Address","Save Address"
 "Save Customer","Save Customer"
 "Save Customer Group","Save Customer Group"
+"Save in address book","Save in address book"
+"Save multiple shipping addresses","Save multiple shipping addresses"
 "Save Password","Save Password"
 "Save and Continue Edit","Save and Continue Edit"
 "Saved %d record(s)","Saved %d record(s)"
+"Select State/Province...","Select State/Province..."
 "Semicolon (;) separated values.<br/>Put semicolon in the beginning for empty first option.<br/>Leave empty for open text field.","Semicolon (;) separated values.<br/>Put semicolon in the beginning for empty first option.<br/>Leave empty for open text field."
 "Send Auto-Generated Password","Send Auto-Generated Password"
 "Send From","Send From"
@@ -460,6 +478,7 @@
 "Warning: email containing password in plaintext will be sent.","Warning: email containing password in plaintext will be sent."
 "Website","Website"
 "Welcome Email","Welcome Email"
+"Welcome, %s!","Welcome, %s!"
 "Wishlist","Wishlist"
 "Wishlist - %d item(s)","Wishlist - %d item(s)"
 "Would you like to change the Customer Group for this order?","Would you like to change the Customer Group for this order?"
