Added info about separate_register_step and guest_checkout

--- a/app/locale/en_US/Mage_Checkout.csv
+++ b/app/locale/en_US/Mage_Checkout.csv
@@ -144,6 +144,7 @@
 "Grouped Product Image","Grouped Product Image"
 "HTML","HTML"
 "ID","ID"
+"If enabled, customers choosing to register during checkout will be redirected to the customer/account/create page.<br />Note: If guest checkout is disabled, users won't be able to complete the order without registering.","If enabled, customers choosing to register during checkout will be redirected to the customer/account/create page.<br />Note: If guest checkout is disabled, users won't be able to complete the order without registering."
 "Incl. Tax","Incl. Tax"
 "Invalid checkout type.","Invalid checkout type."
 "Invalid data.","Invalid data."
