--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -185,6 +185,7 @@
 "Block Name is required field.","Block Name is required field."
 "Block has been deleted.","Block has been deleted."
 "Blocks","Blocks"
+"Bootup warning:","Bootup warning:"
 "Both (without and with tax)","Both (without and with tax)"
 "Both IPN and PDT","Both IPN and PDT"
 "Browse Files...","Browse Files..."
@@ -691,8 +692,8 @@
 "Only Once (version upgrade)","Only Once (version upgrade)"
 "Only attributes with scope ""Global"", input type ""Dropdown"" and Use To Create Configurable Product ""Yes"" are available.","Only attributes with scope ""Global"", input type ""Dropdown"" and Use To Create Configurable Product ""Yes"" are available."
 "Only mapped fields","Only mapped fields"
-"Optimized composer autoloader detected in developer mode.","Optimized composer autoloader detected in developer mode."
 "Maho Project","Maho Project"
+"Optimized autoloader detected in developer mode.","Optimized autoloader detected in developer mode."
 "Optional","Optional"
 "Options","Options"
 "Options is required","Options is required"
@@ -1190,6 +1191,7 @@
 "Use Default Value","Use Default Value"
 "Use Default Variable Values","Use Default Variable Values"
 "Use FTP Connection","Use FTP Connection"
+"Use include paths not enabled.","Use include paths not enabled."
 "Use Website","Use Website"
 "Used Currently For","Used Currently For"
 "Used as Default For","Used as Default For"
