--- a/app/locale/en_US/Mage_Eav.csv
+++ b/app/locale/en_US/Mage_Eav.csv
@@ -46,6 +46,7 @@
 "Attribute with the same code","Attribute with the same code"
 "Can't create table: %s","Can't create table: %s"
 "Catalog Input Type for Store Owner","Catalog Input Type for Store Owner"
+"Input type "%s" not found in the input types list.","Input type "%s" not found in the input types list."
 "Input Type for Store Owner","Input Type for Store Owner"
 "Current module EAV entity is undefined","Current module EAV entity is undefined"
 "Current module pathname is undefined","Current module pathname is undefined"
@@ -102,7 +103,6 @@
 "No","No"
 "No options found in config node %s","No options found in config node %s"
 "None","None"
-"Not shared with other products","Not shared with other products"
 "Not shared with other %s","Not shared with other %s"
 "Problem loading the collection, aborting. Error: %s","Problem loading the collection, aborting. Error: %s"
 "Problem saving the collection, aborting. Error: %s","Problem saving the collection, aborting. Error: %s"
@@ -118,8 +118,6 @@
 "This attribute is used in configurable products","This attribute is used in configurable products"
 "URL","URL"
 "Unique Value","Unique Value"
-"Unique Value (not shared with other products)","Unique Value (not shared with other products)"
-"Unique Value (not shared with other %s)","Unique Value (not shared with other products)"
 "Unknown parameter","Unknown parameter"
 "Values Required","Values Required"
 "Wrong attribute group ID","Wrong attribute group ID"
