--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -37,6 +37,7 @@
 "24 Hours","24 Hours"
 "24h","24h"
 "2YTD","2YTD"
+"2FA verification code is invalid.","2FA verification code is invalid."
 "6 Hours","6 Hours"
 "<h1 class=""page-heading"">404 Error</h1><p>Page not found.</p>","<h1 class=""page-heading"">404 Error</h1><p>Page not found.</p>"
 "<strong>%s</strong> requests access to your account","<strong>%s</strong> requests access to your account"
@@ -227,6 +228,7 @@
 "Categories","Categories"
 "Category","Category"
 "Category:","Category:"
+"Change Password","Change Password"
 "Chart is disabled. If you want to enable chart, click <a href=""%s"">here</a>.","Chart is disabled. If you want to enable chart, click <a href=""%s"">here</a>."
 "Checkbox","Checkbox"
 "Child Transactions","Child Transactions"
@@ -375,6 +377,10 @@
 "Emergency","Emergency"
 "Enable","Enable"
 "Enabled","Enabled"
+"Enable 2FA","Enable 2FA"
+"Enable Passkey Authentication","Enable Passkey Authentication"
+"Enable Password Authentication","Enable Password Authentication"
+"Enable at least one authentication method.","Enable at least one authentication method."
 "Enclose Values In:","Enclose Values In:"
 "Enter a comma separated list of SKUs that will always be displayed at the top of your category","Enter a comma separated list of SKUs that will always be displayed at the top of your category"
 "Entity Attributes","Entity Attributes"
@@ -460,6 +466,9 @@
 "If there is an account associated with %s you will receive an email with a link to reset your password.","If there is an account associated with %s you will receive an email with a link to reset your password."
 "If this message persists, please contact the store owner.","If this message persists, please contact the store owner."
 "If you do not specify an option value for a specific store view then the default (Admin) value will be used.","If you do not specify an option value for a specific store view then the default (Admin) value will be used."
+"Internal Error","Internal Error"
+"Invalid 2FA verification code","Invalid 2FA verification code"
+"Invalid request method","Invalid request method"
 "Images (.gif, .jpg, .png)","Images (.gif, .jpg, .png)"
 "Images Cache","Images Cache"
 "Import","Import"
@@ -624,6 +633,7 @@
 "New Memo for #%s","New Memo for #%s"
 "New Page","New Page"
 "New Password","New Password"
+"New Password Confirmation","New Password Confirmation"
 "New Poll","New Poll"
 "New Profile","New Profile"
 "New Rate","New Rate"
@@ -670,6 +680,7 @@
 "No wishlist item id defined.","No wishlist item id defined."
 "None","None"
 "Not allowed","Not allowed"
+"Not authenticated","Not authenticated"
 "Note:","Note:"
 "Notes","Notes"
 "Notifications","Notifications"
@@ -714,7 +725,14 @@
 "Parent Product Thumbnail","Parent Product Thumbnail"
 "Parent Transaction ID","Parent Transaction ID"
 "Passive mode","Passive mode"
+"Passkey Active","Passkey Active"
+"Passkey Authentication","Passkey Authentication"
+"Passkey Deleted","Passkey Deleted"
+"Passkey Registered","Passkey Registered"
+"Passkey credential already registered to another user.","Passkey credential already registered to another user."
+"Passkey is not enabled for this account.","Passkey is not enabled for this account."
 "Password","Password"
+"Password Authentication","Password Authentication"
 "Password Confirmation","Password Confirmation"
 "Password confirmation must be same as password.","Password confirmation must be same as password."
 "Password must be at least of %d characters.","Password must be at least %d characters."
@@ -835,6 +853,7 @@
 "Purchased Item","Purchased Item"
 "Put store on the maintenance mode while backup creation","Put store on the maintenance mode while backup creation"
 "Put store on the maintenance mode while rollback processing","Put store on the maintenance mode while rollback processing"
+"QR Code","QR Code"
 "Quantity","Quantity"
 "Queue Refresh","Queue Refresh"
 "Queued... Cancel","Queued... Cancel"
@@ -858,6 +877,8 @@
 "Refresh Roles","Refresh Roles"
 "Refresh Statistics","Refresh Statistics"
 "Region/State","Region/State"
+"Register New Passkey","Register New Passkey"
+"Register Passkey","Register Passkey"
 "Regular Price:","Regular Price:"
 "Reject","Reject"
 "Reject token authorization Pop Up for admin","Reject token authorization Pop Up for admin"
@@ -869,6 +890,7 @@
 "Reload captcha","Reload captcha"
 "Remote FTP","Remote FTP"
 "Remove","Remove"
+"Remove Passkey","Remove Passkey"
 "Rename","Rename"
 "Report Issues","Report Issues"
 "Reports","Reports"
@@ -923,6 +945,7 @@
 "Save User","Save User"
 "Save Variable","Save Variable"
 "Save and Continue Edit","Save and Continue Edit"
+"Scan this QR code with your authenticator app (Google Authenticator, Authy, etc.)","Scan this QR code with your authenticator app (Google Authenticator, Authy, etc.)"
 "Search","Search"
 "Search Index","Search Index"
 "Search Term","Search Term"
@@ -1147,6 +1170,7 @@
 "Transaction Type","Transaction Type"
 "Transactional Emails","Transactional Emails"
 "Transactions","Transactions"
+"Two-Factor Authentication","Two-Factor Authentication"
 "Type","Type"
 "Type:","Type:"
 "URL Rewrite","URL Rewrite"
@@ -1220,6 +1244,7 @@
 "Variable Plain Value","Variable Plain Value"
 "Variable has been deleted.","Variable has been deleted."
 "Variables","Variables"
+"Verification Code","Verification Code"
 "Verifier code: %s","Verifier code: %s"
 "View Actions XML","View Actions XML"
 "View Full Size","View Full Size"
