--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -378,11 +378,10 @@
 "Enable","Enable"
 "Enabled","Enabled"
 "Enable 2FA","Enable 2FA"
-"Enable Passkey Authentication","Enable Passkey Authentication"
 "Enable Password Authentication","Enable Password Authentication"
-"Enable at least one authentication method.","Enable at least one authentication method."
 "Enclose Values In:","Enclose Values In:"
 "Enter a comma separated list of SKUs that will always be displayed at the top of your category","Enter a comma separated list of SKUs that will always be displayed at the top of your category"
+"Enter current password and press ""Save Account"" to confirm passkey change.","Enter current password and press ""Save Account"" to confirm passkey change."
 "Entity Attributes","Entity Attributes"
 "Entity Type","Entity Type"
 "Entity type:","Entity type:"
