--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -726,9 +726,9 @@
 "Passive mode","Passive mode"
 "Passkey Active","Passkey Active"
 "Passkey Authentication","Passkey Authentication"
-"Passkey Deleted","Passkey Deleted"
-"Passkey Registered","Passkey Registered"
 "Passkey credential already registered to another user.","Passkey credential already registered to another user."
+"Passkey will be deleted upon saving","Passkey will be deleted upon saving"
+"Passkey will be registered upon saving","Passkey will be registered upon saving"
 "Password","Password"
 "Password Authentication","Password Authentication"
 "Password Confirmation","Password Confirmation"
