--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -1,15 +1,15 @@
-"Add Post"
-"Blog"
-"Blog Posts"
-"Blog Post"
-"Delete Post"
-"Edit Post"
-"Edit Post '%s'"
-"New Post"
-"Post was successfully saved"
-"Post was successfully deleted"
-"Please select post(s)"
-"Publishing Date"
-"Save Post"
-"This post no longer exists."
-"Total of %d post(s) were deleted"
+"Add Post","Add Post"
+"Blog","Blog"
+"Blog Posts","Blog Posts"
+"Blog Post","Blog Post"
+"Delete Post","Delete Post"
+"Edit Post","Edit Post"
+"Edit Post '%s'","Edit Post '%s'"
+"New Post","New Post"
+"Post was successfully saved","Post was successfully saved"
+"Post was successfully deleted","Post was successfully deleted"
+"Please select post(s)","Please select post(s)"
+"Publishing Date","Publishing Date"
+"Save Post","Save Post"
+"This post no longer exists.","This post no longer exists."
+"Total of %d post(s) were deleted","Total of %d post(s) were deleted"
