--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -106,6 +106,7 @@
 "Canceled","Canceled"
 "Canceled order offline.","Canceled order offline."
 "Canceled order online.","Canceled order online."
+"Confirmation Email","Confirmation Email"
 "Cannot add order history.","Cannot add order history."
 "Cannot create an empty shipment.","Cannot create an empty shipment."
 "Cannot determine the field name.","Cannot determine the field name."
@@ -412,6 +413,7 @@
 "Not Capture","Not Capture"
 "Not Initialized","Not Initialized"
 "Not Notified","Not Notified"
+"Not Sent","Not Sent"
 "Not enough valid data to save the parent transaction ID.","Not enough valid data to save the parent transaction ID."
 "Notification Not Applicable","Notification Not Applicable"
 "Notified","Notified"
@@ -665,6 +667,7 @@
 "Send Shipment Email Copy To","Send Shipment Email Copy To"
 "Send Tracking Information","Send Tracking Information"
 "Send shipment info","Send shipment info"
+"Sent","Sent"
 "Set order for existing transactions not allowed","Set order for existing transactions not allowed"
 "Ship","Ship"
 "Ship To","Ship To"
@@ -878,11 +881,3 @@
 "in","in"
 "kg","kg"
 "lb","lb"
-"the credit memo email is not sent","the credit memo email is not sent"
-"the credit memo email was sent","the credit memo email was sent"
-"the invoice email is not sent","the invoice email is not sent"
-"the invoice email was sent","the invoice email was sent"
-"the order confirmation email is not sent","the order confirmation email is not sent"
-"the order confirmation email was sent","the order confirmation email was sent"
-"the shipment email is not sent","the shipment email is not sent"
-"the shipment email was sent","the shipment email was sent"
