--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -1,27 +1,54 @@
 "-- Please select --","-- Please select --"
 "API Access Key","API Access Key"
 "API Key","API Key"
+"Action","Action"
+"Add New Country","Add New Country"
+"Add New Region Name","Add New Region Name"
+"Add New Region","Add New Region"
 "Allowed Currencies","Allowed Currencies"
 "An invalid base currency has been entered.","An invalid base currency has been entered."
+"Are you sure you want to delete the selected countries?","Are you sure you want to delete the selected countries?"
+"Are you sure you want to delete the selected region names?","Are you sure you want to delete the selected region names?"
+"Are you sure you want to delete the selected regions?","Are you sure you want to delete the selected regions?"
+"Are you sure you want to delete this country?","Are you sure you want to delete this country?"
+"Are you sure you want to delete this region name?","Are you sure you want to delete this region name?"
+"Are you sure you want to delete this region?","Are you sure you want to delete this region?"
 "Base Currency","Base Currency"
 "Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"")."
 "Can't convert rate from ""%s-%s"".","Can't convert rate from ""%s-%s""."
 "Cannot retrieve rate from %s.","Cannot retrieve rate from %s."
 "Choose popular countries that should be grouped on top of the country list.","Choose popular countries that should be grouped on top of the country list."
 "Connection Timeout in Seconds","Connection Timeout in Seconds"
-"Continue &raquo;","Continue &raquo;"
-"Country","Country"
+"Continue »","Continue »"
+"Countries","Countries"
 "Country API","Country API"
+"Country ID cannot be changed after creation","Country ID cannot be changed after creation"
+"Country ID","Country ID"
+"Country Information","Country Information"
+"Country Name","Country Name"
 "Country and Format Type combination should be unique","Country and Format Type combination should be unique"
-"Currency","Currency"
+"Country","Country"
 "Currency Options","Currency Options"
 "Currency Setup","Currency Setup"
 "Currency Update Warnings","Currency Update Warnings"
 "Currency rates can't be retrieved.","Currency rates can't be retrieved."
+"Currency","Currency"
 "CurrencyConverterAPI","CurrencyConverterAPI"
 "Default Display Currency","Default Display Currency"
+"Default Display Currency","Default Display Currency"
+"Default Name","Default Name"
+"Default name for this region in English","Default name for this region in English"
+"Delete Country","Delete Country"
+"Delete Region Name","Delete Region Name"
+"Delete Region","Delete Region"
+"Delete","Delete"
+"Directory Management","Directory Management"
 "Directory","Directory"
 "Display not required State","Display not required State"
+"Edit Country ""%s""","Edit Country ""%s"""
+"Edit Region ""%s""","Edit Region ""%s"""
+"Edit Region Name","Edit Region Name"
+"Edit","Edit"
 "Enabled","Enabled"
 "Error Email Recipient","Error Email Recipient"
 "Error Email Sender","Error Email Sender"
@@ -29,6 +56,8 @@
 "FATAL ERROR:","FATAL ERROR:"
 "Fixer.IO","Fixer.IO"
 "Frequency","Frequency"
+"ISO2 Code","ISO2 Code"
+"ISO3 Code","ISO3 Code"
 "Installed Currencies","Installed Currencies"
 "Invalid Import Service specified.","Invalid Import Service specified."
 "Invalid country code: %s","Invalid country code: %s"
@@ -36,25 +65,69 @@
 "Invalid target currency.","Invalid target currency."
 "List of countries","List of countries"
 "List of regions in specified country","List of regions in specified country"
+"Locale","Locale"
+"Localized Name","Localized Name"
+"Localized name for this region","Localized name for this region"
+"Manage Countries","Manage Countries"
+"Manage Region Names","Manage Region Names"
+"Manage Regions","Manage Regions"
+"Name","Name"
+"New Country","New Country"
+"New Region Name","New Region Name"
+"New Region","New Region"
 "No API Key was specified or an invalid API Key was specified.","No API Key was specified or an invalid API Key was specified."
 "One or more invalid symbols have been specified.","One or more invalid symbols have been specified."
+"Please select country(s).","Please select country(s)."
+"Please select region name(s).","Please select region name(s)."
+"Please select region(s).","Please select region(s)."
 "Popular","Popular"
 "Postal Code is Optional for the following countries","Postal Code is Optional for the following countries"
-"Region","Region"
 "Region API","Region API"
+"Region Code","Region Code"
+"Region ID","Region ID"
+"Region Information","Region Information"
+"Region Name Information","Region Name Information"
+"Region Names","Region Names"
+"Region","Region"
+"Regions","Regions"
+"Save Country","Save Country"
+"Save Region Name","Save Region Name"
+"Save Region","Save Region"
+"Save and Continue Edit","Save and Continue Edit"
 "Scheduled Import Settings","Scheduled Import Settings"
 "Select Your Currency","Select Your Currency"
 "Service","Service"
+"Short code for this region (e.g. CA, NY, TX)","Short code for this region (e.g. CA, NY, TX)"
 "Start Time","Start Time"
 "State is required for","State is required for"
 "State/Province","State/Province"
 "States Options","States Options"
 "Strikeiron Email Update Warnings","Strikeiron Email Update Warnings"
+"System","System"
 "The ""%s"" is not allowed as base currency for your subscription plan.","The ""%s"" is not allowed as base currency for your subscription plan."
 "The account this API request is coming from is inactive.","The account this API request is coming from is inactive."
+"The country has been deleted.","The country has been deleted."
+"The country has been saved.","The country has been saved."
 "The current request did not return any results.","The current request did not return any results."
 "The maximum allowed API amount of monthly API requests has been reached.","The maximum allowed API amount of monthly API requests has been reached."
+"The region has been deleted.","The region has been deleted."
+"The region has been saved.","The region has been saved."
+"The region name has been deleted.","The region name has been deleted."
+"The region name has been saved.","The region name has been saved."
+"This country no longer exists.","This country no longer exists."
+"This region name no longer exists.","This region name no longer exists."
+"This region no longer exists.","This region no longer exists."
+"Three character ISO code (e.g. USA, GBR, DEU)","Three character ISO code (e.g. USA, GBR, DEU)"
 "Top Countries","Top Countries"
+"Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
+"Two character ISO code (usually same as Country ID)","Two character ISO code (usually same as Country ID)"
+"Two character country code (e.g. US, GB, DE)","Two character country code (e.g. US, GB, DE)"
+"Unable to find a country to delete.","Unable to find a country to delete."
+"Unable to find a region name to delete.","Unable to find a region name to delete."
+"Unable to find a region to delete.","Unable to find a region to delete."
+"Unable to find country to save.","Unable to find country to save."
+"Unable to find region name to save.","Unable to find region name to save."
+"Unable to find region to save.","Unable to find region to save."
 "Unable to initialize the import model.","Unable to initialize the import model."
 "Undefined rate from ""%s-%s"".","Undefined rate from ""%s-%s""."
 "WARNING:","WARNING:"
