--- a/app/locale/en_US/Mage_Payment.csv
+++ b/app/locale/en_US/Mage_Payment.csv
@@ -1,4 +1,41 @@
 "%s %s cycle.","%s %s cycle."
+"Denylist","Denylist"
+"Denylist (Hide methods)","Denylist (Hide methods)"
+"Payment Restrictions","Payment Restrictions"
+"Payment Methods","Payment Methods"
+"New Restriction","New Restriction"
+"Edit Restriction","Edit Restriction"
+"Add New Restriction","Add New Restriction"
+"Save Restriction","Save Restriction"
+"Delete Restriction","Delete Restriction"
+"General Information","General Information"
+"Conditions","Conditions"
+"Name","Name"
+"Description","Description"
+"Type","Type"
+"Status","Status"
+"Customer Groups","Customer Groups"
+"Countries","Countries"
+"Stores","Stores"
+"Minimum Order Total","Minimum Order Total"
+"Maximum Order Total","Maximum Order Total"
+"Product Categories","Product Categories"
+"Product SKUs","Product SKUs"
+"Leave empty to apply to all payment methods","Leave empty to apply to all payment methods"
+"Comma-separated category IDs","Comma-separated category IDs"
+"Comma-separated SKUs","Comma-separated SKUs"
+"The payment restriction has been saved.","The payment restriction has been saved."
+"The payment restriction has been deleted.","The payment restriction has been deleted."
+"This restriction no longer exists.","This restriction no longer exists."
+"Unable to find a restriction to delete.","Unable to find a restriction to delete."
+"Please select restriction(s).","Please select restriction(s)."
+"Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
+"Total of %d record(s) were updated.","Total of %d record(s) were updated."
+"Are you sure?","Are you sure?"
+"Change status","Change status"
+"Created At","Created At"
+"Action","Action"
+"Edit","Edit"
 "* Required Fields","* Required Fields"
 "--Please Select--","--Please Select--"
 "3D Secure Card Validation","3D Secure Card Validation"
