first commit with conditions

--- a/app/locale/en_US/Mage_Payment.csv
+++ b/app/locale/en_US/Mage_Payment.csv
@@ -37,6 +37,34 @@
 "Action","Action"
 "Edit","Edit"
 "* Required Fields","* Required Fields"
+"Apply the restriction only if the following conditions are met (leave blank for all)","Apply the restriction only if the following conditions are met (leave blank for all)"
+"Conditions Combination","Conditions Combination"
+"Cart Attribute","Cart Attribute"
+"Product Attribute","Product Attribute"
+"Product attribute combination","Product attribute combination"
+"Products subselection","Products subselection"
+"Subtotal","Subtotal"
+"Total Items Quantity","Total Items Quantity"
+"Total Weight","Total Weight"
+"Payment Method","Payment Method"
+"Shipping Method","Shipping Method"
+"Shipping Postcode","Shipping Postcode"
+"Shipping Region","Shipping Region"
+"Shipping State/Province","Shipping State/Province"
+"Shipping Country","Shipping Country"
+"Please choose a condition to add.","Please choose a condition to add."
+"FOUND","FOUND"
+"NOT FOUND","NOT FOUND"
+"is","is"
+"is not","is not"
+"equals or greater than","equals or greater than"
+"equals or less than","equals or less than"
+"greater than","greater than"
+"less than","less than"
+"If an item is %s in the cart with %s of these conditions true:","If an item is %s in the cart with %s of these conditions true:"
+"If %s %s %s for a subselection of items in cart matching %s of these conditions:","If %s %s %s for a subselection of items in cart matching %s of these conditions:"
+"total quantity","total quantity"
+"total amount","total amount"
 "--Please Select--","--Please Select--"
 "3D Secure Card Validation","3D Secure Card Validation"
 "3D Secure Credit Card Validation","3D Secure Credit Card Validation"
