--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -136,3 +136,23 @@
 "Your Currency","Your Currency"
 "Your Currency:","Your Currency:"
 "Your current currency is: %s","Your current currency is: %s"
+"%d country(s) were skipped because they have existing regions.","%d country(s) were skipped because they have existing regions."
+"%d region(s) were skipped because they have existing region names.","%d region(s) were skipped because they have existing region names."
+"A country with this ID already exists.","A country with this ID already exists."
+"A region name for this locale and region combination already exists.","A region name for this locale and region combination already exists."
+"Cannot delete country with existing regions. Please delete all regions first.","Cannot delete country with existing regions. Please delete all regions first."
+"Cannot delete region with existing region names. Please delete all region names first.","Cannot delete region with existing region names. Please delete all region names first."
+"Country ID is required.","Country ID is required."
+"Country ID must be exactly 2 uppercase letters.","Country ID must be exactly 2 uppercase letters."
+"Country is required.","Country is required."
+"Default name cannot be longer than 255 characters.","Default name cannot be longer than 255 characters."
+"Default name is required.","Default name is required."
+"ISO2 code must be exactly 2 uppercase letters.","ISO2 code must be exactly 2 uppercase letters."
+"ISO3 code must be exactly 3 uppercase letters.","ISO3 code must be exactly 3 uppercase letters."
+"Locale is required.","Locale is required."
+"Region code cannot be longer than 32 characters.","Region code cannot be longer than 32 characters."
+"Region is required.","Region is required."
+"Region name cannot be longer than 255 characters.","Region name cannot be longer than 255 characters."
+"Region name is required.","Region name is required."
+"Selected country does not exist.","Selected country does not exist."
+"Selected region does not exist.","Selected region does not exist."
