--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -1,54 +1,65 @@
+"%d country(s) were skipped because they have existing country names.","%d country(s) were skipped because they have existing country names."
+"%d region(s) were skipped because they have existing region names.","%d region(s) were skipped because they have existing region names."
 "-- Please select --","-- Please select --"
+"A country name for this locale and country combination already exists.","A country name for this locale and country combination already exists."
+"A country with this ID already exists.","A country with this ID already exists."
+"A region name for this locale and region combination already exists.","A region name for this locale and region combination already exists."
+"A region with code ""%s"" already exists in this country.","A region with code ""%s"" already exists in this country."
 "API Access Key","API Access Key"
 "API Key","API Key"
-"Action","Action"
 "Add New Country","Add New Country"
-"Add New Region Name","Add New Region Name"
 "Add New Region","Add New Region"
+"Add Translation","Add Translation"
 "Allowed Currencies","Allowed Currencies"
 "An invalid base currency has been entered.","An invalid base currency has been entered."
 "Are you sure you want to delete the selected countries?","Are you sure you want to delete the selected countries?"
+"Are you sure you want to delete the selected country names?","Are you sure you want to delete the selected country names?"
 "Are you sure you want to delete the selected region names?","Are you sure you want to delete the selected region names?"
 "Are you sure you want to delete the selected regions?","Are you sure you want to delete the selected regions?"
 "Are you sure you want to delete this country?","Are you sure you want to delete this country?"
-"Are you sure you want to delete this region name?","Are you sure you want to delete this region name?"
 "Are you sure you want to delete this region?","Are you sure you want to delete this region?"
 "Base Currency","Base Currency"
 "Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"")."
 "Can't convert rate from ""%s-%s"".","Can't convert rate from ""%s-%s""."
+"Cannot delete country with existing country names. Please delete all country names first.","Cannot delete country with existing country names. Please delete all country names first."
+"Cannot delete region with existing region names. Please delete all region names first.","Cannot delete region with existing region names. Please delete all region names first."
 "Cannot retrieve rate from %s.","Cannot retrieve rate from %s."
 "Choose popular countries that should be grouped on top of the country list.","Choose popular countries that should be grouped on top of the country list."
 "Connection Timeout in Seconds","Connection Timeout in Seconds"
-"Continue »","Continue »"
+"Continue &raquo;","Continue &raquo;"
 "Countries","Countries"
+"Country","Country"
 "Country API","Country API"
 "Country ID cannot be changed after creation","Country ID cannot be changed after creation"
+"Country ID is required.","Country ID is required."
+"Country ID must be exactly 2 uppercase letters.","Country ID must be exactly 2 uppercase letters."
 "Country ID","Country ID"
 "Country Information","Country Information"
 "Country Name","Country Name"
 "Country and Format Type combination should be unique","Country and Format Type combination should be unique"
-"Country","Country"
+"Country is required.","Country is required."
+"Country name cannot be longer than 255 characters.","Country name cannot be longer than 255 characters."
+"Country name is required.","Country name is required."
+"Currency","Currency"
 "Currency Options","Currency Options"
 "Currency Setup","Currency Setup"
 "Currency Update Warnings","Currency Update Warnings"
 "Currency rates can't be retrieved.","Currency rates can't be retrieved."
-"Currency","Currency"
 "CurrencyConverterAPI","CurrencyConverterAPI"
 "Default Display Currency","Default Display Currency"
-"Default Display Currency","Default Display Currency"
 "Default Name","Default Name"
+"Default name cannot be longer than 255 characters.","Default name cannot be longer than 255 characters."
 "Default name for this region in English","Default name for this region in English"
+"Default name is required.","Default name is required."
 "Delete Country","Delete Country"
-"Delete Region Name","Delete Region Name"
 "Delete Region","Delete Region"
-"Delete","Delete"
 "Directory Management","Directory Management"
 "Directory","Directory"
 "Display not required State","Display not required State"
 "Edit Country ""%s""","Edit Country ""%s"""
+"Edit Country","Edit Country"
 "Edit Region ""%s""","Edit Region ""%s"""
-"Edit Region Name","Edit Region Name"
-"Edit","Edit"
+"Edit Region","Edit Region"
 "Enabled","Enabled"
 "Error Email Recipient","Error Email Recipient"
 "Error Email Sender","Error Email Sender"
@@ -57,7 +68,11 @@
 "Fixer.IO","Fixer.IO"
 "Frequency","Frequency"
 "ISO2 Code","ISO2 Code"
+"ISO2 code is required.","ISO2 code is required."
+"ISO2 code must be exactly 2 uppercase letters.","ISO2 code must be exactly 2 uppercase letters."
 "ISO3 Code","ISO3 Code"
+"ISO3 code is required.","ISO3 code is required."
+"ISO3 code must be exactly 3 uppercase letters.","ISO3 code must be exactly 3 uppercase letters."
 "Installed Currencies","Installed Currencies"
 "Invalid Import Service specified.","Invalid Import Service specified."
 "Invalid country code: %s","Invalid country code: %s"
@@ -65,37 +80,40 @@
 "Invalid target currency.","Invalid target currency."
 "List of countries","List of countries"
 "List of regions in specified country","List of regions in specified country"
-"Locale","Locale"
+"Locale and country name are required.","Locale and country name are required."
+"Locale and region name are required.","Locale and region name are required."
+"Locale is required.","Locale is required."
 "Localized Name","Localized Name"
+"Localized name for this country","Localized name for this country"
 "Localized name for this region","Localized name for this region"
 "Manage Countries","Manage Countries"
-"Manage Region Names","Manage Region Names"
+"Manage Directory","Manage Directory"
 "Manage Regions","Manage Regions"
-"Name","Name"
+"Manage Translations","Manage Translations"
 "New Country","New Country"
-"New Region Name","New Region Name"
 "New Region","New Region"
 "No API Key was specified or an invalid API Key was specified.","No API Key was specified or an invalid API Key was specified."
 "One or more invalid symbols have been specified.","One or more invalid symbols have been specified."
+"Please select country name(s).","Please select country name(s)."
 "Please select country(s).","Please select country(s)."
 "Please select region name(s).","Please select region name(s)."
 "Please select region(s).","Please select region(s)."
 "Popular","Popular"
 "Postal Code is Optional for the following countries","Postal Code is Optional for the following countries"
+"Region","Region"
 "Region API","Region API"
 "Region Code","Region Code"
 "Region ID","Region ID"
 "Region Information","Region Information"
-"Region Name Information","Region Name Information"
-"Region Names","Region Names"
-"Region","Region"
+"Region code cannot be longer than 32 characters.","Region code cannot be longer than 32 characters."
+"Region name cannot be longer than 255 characters.","Region name cannot be longer than 255 characters."
+"Region name is required.","Region name is required."
 "Regions","Regions"
 "Save Country","Save Country"
-"Save Region Name","Save Region Name"
 "Save Region","Save Region"
-"Save and Continue Edit","Save and Continue Edit"
 "Scheduled Import Settings","Scheduled Import Settings"
 "Select Your Currency","Select Your Currency"
+"Selected country does not exist.","Selected country does not exist."
 "Service","Service"
 "Short code for this region (e.g. CA, NY, TX)","Short code for this region (e.g. CA, NY, TX)"
 "Start Time","Start Time"
@@ -112,22 +130,12 @@
 "The maximum allowed API amount of monthly API requests has been reached.","The maximum allowed API amount of monthly API requests has been reached."
 "The region has been deleted.","The region has been deleted."
 "The region has been saved.","The region has been saved."
-"The region name has been deleted.","The region name has been deleted."
-"The region name has been saved.","The region name has been saved."
 "This country no longer exists.","This country no longer exists."
-"This region name no longer exists.","This region name no longer exists."
 "This region no longer exists.","This region no longer exists."
 "Three character ISO code (e.g. USA, GBR, DEU)","Three character ISO code (e.g. USA, GBR, DEU)"
 "Top Countries","Top Countries"
-"Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
 "Two character ISO code (usually same as Country ID)","Two character ISO code (usually same as Country ID)"
 "Two character country code (e.g. US, GB, DE)","Two character country code (e.g. US, GB, DE)"
-"Unable to find a country to delete.","Unable to find a country to delete."
-"Unable to find a region name to delete.","Unable to find a region name to delete."
-"Unable to find a region to delete.","Unable to find a region to delete."
-"Unable to find country to save.","Unable to find country to save."
-"Unable to find region name to save.","Unable to find region name to save."
-"Unable to find region to save.","Unable to find region to save."
 "Unable to initialize the import model.","Unable to initialize the import model."
 "Undefined rate from ""%s-%s"".","Undefined rate from ""%s-%s""."
 "WARNING:","WARNING:"
@@ -136,23 +144,3 @@
 "Your Currency","Your Currency"
 "Your Currency:","Your Currency:"
 "Your current currency is: %s","Your current currency is: %s"
-"%d country(s) were skipped because they have existing regions.","%d country(s) were skipped because they have existing regions."
-"%d region(s) were skipped because they have existing region names.","%d region(s) were skipped because they have existing region names."
-"A country with this ID already exists.","A country with this ID already exists."
-"A region name for this locale and region combination already exists.","A region name for this locale and region combination already exists."
-"Cannot delete country with existing regions. Please delete all regions first.","Cannot delete country with existing regions. Please delete all regions first."
-"Cannot delete region with existing region names. Please delete all region names first.","Cannot delete region with existing region names. Please delete all region names first."
-"Country ID is required.","Country ID is required."
-"Country ID must be exactly 2 uppercase letters.","Country ID must be exactly 2 uppercase letters."
-"Country is required.","Country is required."
-"Default name cannot be longer than 255 characters.","Default name cannot be longer than 255 characters."
-"Default name is required.","Default name is required."
-"ISO2 code must be exactly 2 uppercase letters.","ISO2 code must be exactly 2 uppercase letters."
-"ISO3 code must be exactly 3 uppercase letters.","ISO3 code must be exactly 3 uppercase letters."
-"Locale is required.","Locale is required."
-"Region code cannot be longer than 32 characters.","Region code cannot be longer than 32 characters."
-"Region is required.","Region is required."
-"Region name cannot be longer than 255 characters.","Region name cannot be longer than 255 characters."
-"Region name is required.","Region name is required."
-"Selected country does not exist.","Selected country does not exist."
-"Selected region does not exist.","Selected region does not exist."
