Content check warning

--- a/app/locale/en_US/Mage_Cms.csv
+++ b/app/locale/en_US/Mage_Cms.csv
@@ -103,6 +103,7 @@
 "Select Page...","Select Page..."
 "Show Breadcrumbs for CMS Pages","Show Breadcrumbs for CMS Pages"
 "Show Notice if JavaScript is Disabled","Show Notice if JavaScript is Disabled"
+"Some content is not supported. Clean and continue?","Some content is not supported. Clean and continue?"
 "Static Blocks","Static Blocks"
 "Status","Status"
 "Storage Root","Storage Root"
