Simplify insertMahoSlideshow command

--- a/app/locale/en_US/Mage_Cms.csv
+++ b/app/locale/en_US/Mage_Cms.csv
@@ -93,6 +93,7 @@
 "Page Status","Page Status"
 "Page Title","Page Title"
 "Pages","Pages"
+"Please add at least one image to the slideshow","Please add at least one image to the slideshow"
 "Product Tax Class Information","Product Tax Class Information"
 "Redirect to CMS-page if Cookies are Disabled","Redirect to CMS-page if Cookies are Disabled"
 "Relative to Website Base URL","Relative to Website Base URL"
