--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -864,3 +864,9 @@
 "select all","select all"
 "unselect all","unselect all"
 "x","x"
+"Category not found.","Category not found."
+"Category is not dynamic.","Category is not dynamic."
+"Conditions","Conditions"
+"Dynamic category processed successfully.","Dynamic category processed successfully."
+"Dynamic Category Rules","Dynamic Category Rules"
+"When enabled, associated products are automatically recalculated when reindex runs.","When enabled, associated products are automatically recalculated when reindex runs."
