Added "Dynamic Categories" feature: rule-based product assignment (#200)

--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -176,10 +176,12 @@
 "Category Data","Category Data"
 "Category delete error: %s","Category delete error: %d"
 "Category Flat Data","Category Flat Data"
+"Category is not dynamic.","Category is not dynamic."
 "Category Link Block Template","Category Link Block Template"
 "Category Link Inline Template","Category Link Inline Template"
 "Category move error: %s","Category move error: %s"
 "Category must be an instance of Mage_Catalog_Model_Category.","Category must be an instance of Mage_Catalog_Model_Category."
+"Category not found.","Category not found."
 "Category Products","Category Products"
 "Category save error: %s","Category save error: %s"
 "Category Top Navigation","Category Top Navigation"
@@ -202,6 +204,7 @@
 "Comparable on the Frontend","Comparable on the Frontend"
 "Compare","Compare"
 "Compare Products","Compare Products"
+"Conditions","Conditions"
 "Conditions Combination","Conditions Combination"
 "Configurable Product","Configurable Product"
 "Configurable Product Settings","Configurable Product Settings"
@@ -276,6 +279,8 @@
 "Duplicate website, country and state tax found.","Duplicate website, country and state tax found."
 "Duplicate website group price customer group.","Duplicate website group price customer group."
 "Duplicate website tier price customer group and quantity.","Duplicate website tier price customer group and quantity."
+"Dynamic category processed successfully.","Dynamic category processed successfully."
+"Dynamic Category Rules","Dynamic Category Rules"
 "E.g. {{media url=""path/to/image.jpg""}} {{skin url=""path/to/picture.gif""}}. Dynamic directives parsing impacts catalog performance.","E.g. {{media url=""path/to/image.jpg""}} {{skin url=""path/to/picture.gif""}}. Dynamic directives parsing impacts catalog performance."
 "each","each"
 "Edit","Edit"
@@ -845,6 +850,7 @@
 "Websites","Websites"
 "Website Store Must be checked","Website Store Must be checked"
 "What's this?","What's this?"
+"When enabled, associated products are automatically recalculated when reindex runs.","When enabled, associated products are automatically recalculated when reindex runs."
 "Whether to show ""All"" option in the ""Show X Per Page"" dropdown.","Whether to show ""All"" option in the ""Show X Per Page"" dropdown."
 "Will make search for the query above return results for this search.","Will make search for the query above return results for this search."
 "Wrong BuyRequest instance in options group.","Wrong BuyRequest instance in options group."
