--- a/app/locale/en_US/Mage_Page.csv
+++ b/app/locale/en_US/Mage_Page.csv
@@ -48,7 +48,8 @@
 "JavaScript seems to be disabled in your browser.","JavaScript seems to be disabled in your browser."
 "Left Column","Left Column"
 "Left Column First (shows above main column on smaller screens)","Left Column First (shows above main column on smaller screens)"
-"Left sidebar","Left sidebar"
+"Primary sidebar","Primary sidebar"
+"Secondary sidebar","Secondary sidebar"
 "Main Content Area","Main Content Area"
 "Main Navigation","Main Navigation"
 "Menu","Menu"
