--- a/app/locale/en_US/Mage_Cms.csv
+++ b/app/locale/en_US/Mage_Cms.csv
@@ -48,6 +48,7 @@
 "Date Created","Date Created"
 "Delete Block","Delete Block"
 "Delete File","Delete File"
+"Edit Image","Edit Image"
 "Delete Folder","Delete Folder"
 "Delete Page","Delete Page"
 "Description","Description"
