--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -729,6 +729,10 @@
 "The file '%s' for '%s' has an invalid extension","The file '%s' for '%s' has an invalid extension"
 "The file '%s' you uploaded is larger than %s Megabytes allowed by server","The file '%s' you uploaded is larger than %s Megabytes allowed by server"
 "The file you uploaded is larger than %s Megabytes allowed by server","The file you uploaded is larger than %s Megabytes allowed by server"
+"The file was only partially uploaded. Please try again.","The file was only partially uploaded. Please try again."
+"Please select a file for the required option ""%s"".","Please select a file for the required option ""%s""."
+"File upload failed. Please contact the store administrator.","File upload failed. Please contact the store administrator."
+"File upload failed with error code: %s","File upload failed with error code: %s"
 "The filters must be an array.","The filters must be an array."
 "The Flat Catalog module has a limit of %2\$d filterable and/or sortable attributes. Currently there are %1\$d of them. Please reduce the number of filterable/sortable attributes in order to use this module","The Flat Catalog module has a limit of %2\$d filterable and/or sortable attributes. Currently there are %1\$d of them. Please reduce the number of filterable/sortable attributes in order to use this module"
 "The From Date value should be less than or equal to the To Date value.","The From Date value should be less than or equal to the To Date value."
