--- a/app/locale/en_US/Mage_Payment.csv
+++ b/app/locale/en_US/Mage_Payment.csv
@@ -203,3 +203,4 @@
 "Wrong or empty billing amount specified.","Wrong or empty billing amount specified."
 "Year","Year"
 "Zero Subtotal Checkout","Zero Subtotal Checkout"
+"Number of Complete Orders","Number of Complete Orders"
