--- a/app/locale/en_US/Mage_Payment.csv
+++ b/app/locale/en_US/Mage_Payment.csv
@@ -204,3 +204,4 @@
 "Wrong or empty billing amount specified.","Wrong or empty billing amount specified."
 "Year","Year"
 "Zero Subtotal Checkout","Zero Subtotal Checkout"
+"Customer Segment","Customer Segment"
