--- a/app/locale/en_US/Mage_SalesRule.csv
+++ b/app/locale/en_US/Mage_SalesRule.csv
@@ -27,6 +27,7 @@
 "Code Suffix","Code Suffix"
 "Conditions","Conditions"
 "Conditions combination","Conditions combination"
+"Customer Segment","Customer Segment"
 "Coupon","Coupon"
 "Coupon Code","Coupon Code"
 "Coupon Qty","Coupon Qty"
