--- a/app/locale/en_US/Maho_SpeculationRules.csv
+++ b/app/locale/en_US/Maho_SpeculationRules.csv
@@ -1,13 +1,21 @@
 "Conservative CSS Selectors","Conservative CSS Selectors"
 "Conservative Mode","Conservative Mode"
+"Conservative Mode - Action Type","Conservative Mode - Action Type"
+"Conservative Mode - CSS Selectors","Conservative Mode - CSS Selectors"
 "Eager CSS Selectors","Eager CSS Selectors"
 "Eager Mode","Eager Mode"
+"Eager Mode - Action Type","Eager Mode - Action Type"
+"Eager Mode - CSS Selectors","Eager Mode - CSS Selectors"
 "Enable Speculation Rules","Enable Speculation Rules"
+"Enable the Speculation Rules API to improve page load performance. Only works in supported browsers (Chrome 109+, Edge 109+).","Enable the Speculation Rules API to improve page load performance. Only works in supported browsers (Chrome 109+, Edge 109+)."
 "Moderate CSS Selectors","Moderate CSS Selectors"
 "Moderate Mode","Moderate Mode"
+"Moderate Mode - Action Type","Moderate Mode - Action Type"
+"Moderate Mode - CSS Selectors","Moderate Mode - CSS Selectors"
 "One CSS selector per line. Example: .product-link","One CSS selector per line. Example: .product-link"
 "One CSS selector per line. Triggered on 200ms hover.","One CSS selector per line. Triggered on 200ms hover."
 "One CSS selector per line. Triggered on mouse/touch down.","One CSS selector per line. Triggered on mouse/touch down."
 "Prefetch","Prefetch"
 "Prerender","Prerender"
 "Speculation Rules","Speculation Rules"
+"Speculation Rules API","Speculation Rules API"
