--- a/app/locale/en_US/Mage_Usa.csv
+++ b/app/locale/en_US/Mage_Usa.csv
@@ -30,6 +30,8 @@
 "Cannot identify measure unit for %s","Cannot identify measure unit for %s"
 "Cannot identify weight unit for %s","Cannot identify weight unit for %s"
 "Centimeters","Centimeters"
+"Client ID","Client ID"
+"Client Secret","Client Secret"
 "cm","cm"
 "Commercial","Commercial"
 "Configuration","Configuration"
@@ -103,6 +105,7 @@
 "Free Shipping with Minimum Order Amount","Free Shipping with Minimum Order Amount"
 "Freight","Freight"
 "Freight worldwide","Freight worldwide"
+"Gateway REST URL","Gateway REST URL"
 "Gateway URL","Gateway URL"
 "Gift","Gift"
 "Girth","Girth"
@@ -262,6 +265,7 @@
 "Shipment Duty Payment Type","Shipment Duty Payment Type"
 "Shipment Type","Shipment Type"
 "Shipper Number","Shipper Number"
+"Shipping Confirm REST URL","Shipping Confirm REST URL"
 "Shipping Key","Shipping Key"
 "Shipping Key (International)","Shipping Key (International)"
 "Ship to Applicable Countries","Ship to Applicable Countries"
@@ -281,6 +285,8 @@
 "There is no items in this order","There is no items in this order"
 "The response is in wrong format.","The response is in wrong format."
 "Title","Title"
+"To obtain your Client ID/Secret you have to:<br />- Register to <a href='https://developer.ups.com' target=_blank>https://developer.ups.com</a><br />- Go to My Apps -> Add Apps and fill all data<br />- Add Rating, Authorization, Shipping, TimeInTransit, Tracking products to the app","To obtain your Client ID/Secret you have to:<br />- Register to <a href='https://developer.ups.com' target=_blank>https://developer.ups.com</a><br />- Go to My Apps -> Add Apps and fill all data<br />- Add Rating, Authorization, Shipping, TimeInTransit, Tracking products to the app"
+"Tracking REST URL","Tracking REST URL"
 "Unable to retrieve tracking","Unable to retrieve tracking"
 "Unknown error","Unknown error"
 "UPS","UPS"
