--- a/app/locale/en_US/Mage_Sales.csv
+++ b/app/locale/en_US/Mage_Sales.csv
@@ -862,3 +862,12 @@
 "Zip/Postal Code","Zip/Postal Code"
 "ZIP/Post Code","ZIP/Post Code"
 "ZIP Code","ZIP Code"
+"Missing an order?","Missing an order?"
+"If you placed an order as a guest using this email address, you can add it to your account.","If you placed an order as a guest using this email address, you can add it to your account."
+"Click here to check for guest orders","Click here to check for guest orders"
+"This will permanently associate all guest orders placed with your email address to your account. Continue?","This will permanently associate all guest orders placed with your email address to your account. Continue?"
+"Successfully associated %d guest order(s) with your account.","Successfully associated %d guest order(s) with your account."
+"Please confirm your email address before associating guest orders.","Please confirm your email address before associating guest orders."
+"Please log in to associate orders.","Please log in to associate orders."
+"No guest orders found for your email address.","No guest orders found for your email address."
+"An error occurred while associating orders. Please try again.","An error occurred while associating orders. Please try again."
