--- a/app/locale/en_US/Mage_Page.csv
+++ b/app/locale/en_US/Mage_Page.csv
@@ -31,6 +31,7 @@
 "Main Content Area","Main Content Area"
 "Main Navigation","Main Navigation"
 "Menu","Menu"
+"Minimal","Minimal"
 "Navigation Bar","Navigation Bar"
 "Next","Next"
 "Page:","Page:"
@@ -54,6 +55,7 @@
 "Store Notice","Store Notice"
 "This is a demo store. Any orders placed through this store will not be honored or fulfilled.","This is a demo store. Any orders placed through this store will not be honored or fulfilled."
 "View All","View All"
+"Welcome!","Welcome!"
 "Welcome, %s!","Welcome, %s!"
 "You must have JavaScript enabled in your browser to utilize the functionality of this website.","You must have JavaScript enabled in your browser to utilize the functionality of this website."
 "Your Language","Your Language"
