--- a/app/locale/en_US/Mage_Page.csv
+++ b/app/locale/en_US/Mage_Page.csv
@@ -61,3 +61,6 @@
 "You must have JavaScript enabled in your browser to utilize the functionality of this website.","You must have JavaScript enabled in your browser to utilize the functionality of this website."
 "Your Language","Your Language"
 "Your Language:","Your Language:"
+"Logo Width (in px)","Logo Width (in px)"
+"Logo Height (in px)","Logo Height (in px)"
+"Deprecated: Use SVG or srcset","Deprecated: Use SVG or srcset"
